# python-gammu

./: .coveragerc  .gitignore  .landscape.yaml  .pre-commit-config.yaml  .scrutinizer.yml  .travis.yml  CMakeTests.txt  MANIFEST.in  NEWS.rst  README.rst  appveyor.yml  pyproject.toml  requirements-test.txt  requirements.txt  setup.cfg  setup.py
.github/: renovate.json
.github/actions/install-gammu/: action.yml
.github/workflows/: codeql.yml  setup.yml  test.yml
admin/: release
examples/: __init__.py  addcontacts.py  addfile.py  async.py  backup-convertor.py  backup_convertor.py  batteryinfo.py  debugging.py  dialvoice.py  doc-exceptions.py  dummy-phone.py  dummy_phone.py  filesystem-test.py  filesystem_test.py  getallcalendar.py  getallmemory-nonext.py  getallmemory.py  getallmemory_nonext.py  getallsms-decode.py  getallsms.py  getallsms_decode.py  getalltodo.py  getdiverts.py  incoming.py  listfilesystem.py  mass-sms.py  mass_sms.py  network_info.py  pdu-decoder.py  pdu_decoder.py  read-sms-backup.py  read_sms_backup.py  run-dummy.sh  savesmspercontact.py  sendlongsms.py  sendsms.py  service-numbers.py  service_numbers.py  setdiverts.py  sms-encode-decode.py  (+10 more)
gammu/: __init__.py  asyncworker.py  data.py  exception.py  smsd.py  worker.py
gammu/src/: data.c  errors.c  gammu.c  misc.c  smsd.c
gammu/src/convertors/: backup.c  base.c  bitmap.c  calendar.c  call.c  diverts.c  file.c  memory.c  misc.c  ringtone.c  sms.c  string.c  time.c  todo.c  wap.c
include/: convertors.h  data.h  errors.h  misc.h
test/: __init__.py  test_asyncworker.py  test_backup.py  test_config.py  test_data.py  test_dummy.py  test_errors.py  test_pdu.py  test_sms.py  test_smsd.py  test_unicode_surrogates.py  test_worker.py
test/data/gammu-dummy/sms/4/: 20  21
