[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=61.2"
]

[dependency-groups]
dev = [
  "pre-commit==4.5.1",
  "pytest-cov==7.0.0",
  "pytest-github-actions-annotate-failures==0.3.0",
  "pytest==9.0.2"
]

[project]
authors = [
  {email = "michal@cihar.com", name = "Michal Čihař"}
]
classifiers = [
  "Development Status :: 6 - Mature",
  "Intended Audience :: Developers",
  "Intended Audience :: Telecommunications Industry",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Programming Language :: C",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python",
  "Topic :: Communications :: Telephony",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Hardware"
]
description = "Gammu bindings"
keywords = [
  "calendar",
  "contact",
  "gammu",
  "mobile",
  "phone",
  "SMS",
  "todo"
]
license = "GPL-2.0-or-later"
name = "python-gammu"
requires-python = ">=3.10"
version = "3.2.4"

[project.readme]
content-type = "text/x-rst"
file = "README.rst"

[project.urls]
Download = "https://wammu.eu/download/python-gammu/"
Homepage = "https://wammu.eu/python-gammu/"

[tool.isort]
force_grid_wrap = 0
include_trailing_comma = true
known_first_party = [
  "gammu"
]
line_length = 88
multi_line_output = 3
use_parentheses = true

[tool.setuptools]
include-package-data = false
packages = [
  "gammu"
]
platforms = [
  "Linux",
  "Mac OSX",
  "Windows 95/98/ME",
  "Windows XP/2000/NT"
]

[tool.tomlsort]
ignore_case = true
sort_inline_arrays = true
sort_inline_tables = true
sort_table_keys = true
spaces_before_inline_comment = 2
