[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=61.2"
]

[dependency-groups]
dev = [
  "pytest-cov==7.0.0",
  "pytest-github-actions-annotate-failures==0.3.0",
  "pytest==9.0.2"
]

[project]
authors = [
  {email = "michal@cihar.com", name = "Michal Čihař"}
]
classifiers = [
  "Development Status :: 6 - Mature",
  "Intended Audience :: Developers",
  "Intended Audience :: Telecommunications Industry",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Programming Language :: C",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python",
  "Topic :: Communications :: Telephony",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Hardware"
]
description = "Gammu bindings"
keywords = [
  "calendar",
  "contact",
  "gammu",
  "mobile",
  "phone",
  "SMS",
  "todo"
]
license = "GPL-2.0-or-later"
name = "python-gammu"
requires-python = ">=3.10"
version = "3.2.5"

[project.readme]
content-type = "text/x-rst"
file = "README.rst"

[project.urls]
Documentation = "https://docs.gammu.org/python/"
Download = "https://wammu.eu/download/python-gammu/"
Funding = "https://wammu.eu/donate/"
Homepage = "https://wammu.eu/python-gammu/"
"Issue Tracker" = "https://github.com/gammu/python-gammu/issues"
"Source Code" = "https://github.com/gammu/python-gammu"

[tool.check-manifest]
ignore = [
  ".pre-commit-config.yaml",
  "admin/*"
]

[tool.coverage.paths]
source = [
  "."
]

[tool.coverage.report]
exclude_also = [
  "@(abc\\.)?abstractmethod",
  # Don't complain about missing debug-only code:
  "def __repr__",
  # Don't complain if non-runnable code isn't run:
  "if 0:",
  "if __name__ == .__main__.:",
  "if self\\.debug",
  # Type checking
  "if TYPE_CHECKING:",
  # Have to re-enable the standard pragma
  "pragma: no cover",
  # Don't complain if tests don't hit defensive assertion code:
  "raise AssertionError",
  "raise NotImplementedError"
]

[tool.coverage.run]
branch = true

[tool.isort]
force_grid_wrap = 0
include_trailing_comma = true
known_first_party = [
  "gammu"
]
line_length = 88
multi_line_output = 3
use_parentheses = true

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-safe-fixes = [
  "ANN",
  "D",
  "EM101",
  "EM102",
  "FA102",
  "FLY",
  "SIM",
  "TCH",
  "UP"
]
future-annotations = true
ignore = [
  "ANN001",
  "ANN002",
  "ANN003",
  "ANN201",
  "ANN202",
  "ARG001",
  "ARG002",
  "COM",  # CONFIG: No trailing commas
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D107",
  "D203",  # CONFIG: incompatible with D211
  "D206",  # CONFIG: formatter
  "D212",  # CONFIG: incompatible with D213
  "D401",
  "DOC201",
  "DOC501",
  "DTZ001",
  "DTZ006",
  "E501",  # WONTFIX: we accept long strings (rest is formatted by black)
  "FBT003",
  "FIX002",
  "N802",
  "N818",
  "PERF203",  # WONFIX: affects only old Python versions
  "PLR2004",
  "PLR6301",
  "RUF012",
  "S607",
  "SIM115",
  "SLF001",
  "TD002",
  "TD003",
  "TRY003",
  "TRY300"
]
preview = true
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"examples/*.py" = ["T201"]
"setup.py" = ["T201"]
"test/*.py" = ["S101", "T201"]

[tool.setuptools]
include-package-data = false
packages = [
  "gammu"
]
platforms = [
  "Linux",
  "Mac OSX",
  "Windows 95/98/ME",
  "Windows XP/2000/NT"
]

[tool.tomlsort]
ignore_case = true
sort_inline_arrays = true
sort_inline_tables = true
sort_table_keys = true
spaces_before_inline_comment = 2

[tool.typos.default]
extend-identifiers = {_O_WRONLY = "_O_WRONLY"}

[tool.typos.files]
extend-exclude = [
  "test/data/*.vcf",
  "test/data/gammu-dummy/pbk/ME/103"
]
